--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async-validator-2": "^1.0.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^16.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
